--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>Aspel</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Servicios de Soporte Aspel">
+  <meta name="keywords" content="aspel, servicios, soporte, pyme,sistemas aspel, sae, coi, noi,prod, caja, factura electronica, soporte,distribudor aspel"
   <link rel="shortcut icon" type="image/ico" href="favicon.png"/>
   <!-- index-->
   <meta name="google-site-verification" content="qTPOgZkRh91B5PPYwyTl4rvFEo87xieGzi30ifnzCEg" />
