--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@
   <title>Aspel</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Servicios de Soporte Aspel">
-  <meta name="keywords" content="aspel, servicios, soporte, pyme,sistemas aspel, sae, coi, noi,prod, caja, factura electronica, soporte,distribudor aspel"
+  <meta name="keywords" content="aspel, servicios, soporte, pyme,sistemas aspel, sae, coi, noi,prod, caja, factura electronica, soporte,distribudor aspel">
+  <meta name="msvalidate.01" content="29E9443A3CCA9D7FA2041AB1096E795E" />
   <link rel="shortcut icon" type="image/ico" href="favicon.png"/>
   <!-- index-->
   <meta name="google-site-verification" content="qTPOgZkRh91B5PPYwyTl4rvFEo87xieGzi30ifnzCEg" />
